Bug 1825681 - Allow smooth scrolls for XUL scrollbox. r=botond

Allow smooth scrolls for elements in the browser chrome if
toolkit.scrollbox.smoothScroll is set. This should be used instead of
the value of general.smoothScroll.

Differential Revision: https://phabricator.services.mozilla.com/D181662